--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="logo.png">
+        <img class="logo" src="res/logo.png">
+        <div class="header-items">
+            <a href="#">О ШКОЛЕ</a>
+            <a href="#">КУРСЫ</a>
+            <a href="#">ОТЗЫВЫ</a>
+            <a href="#">КОНТАКТЫ</a>
+        </div>
     </header>
     <div class="start">
         
