--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
             <a href="#">КОНТАКТЫ</a>
         </div>
     </header>
-    <div class="start">
-        
-    </div>
+    <section class="start-section">
+        <div class="content">
+            <h2>ОНЛАЙН-ШКОЛА ПРОГРАММИРОВАНИЯ</h2>
+            <h1>K<span class="blue-letter">O</span>D<span class="purple-letter">A</span><span class="blue-letter">M</span>A</h1>
+            <img id="main-btn" src="res/main_button.png">
+            <img id="select-course-btn" src="res/select_course_btn.png">
+        </div>
+    </section>
 </body>
 </html>
