font received with webcite

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
     </header>
     <section class="start-section">
+        <!-- <img id="ground" src="res/ground.png"> -->
         <div class="content">
             <h2>ОНЛАЙН-ШКОЛА ПРОГРАММИРОВАНИЯ</h2>
             <h1>K<span class="blue-letter">O</span>D<span class="purple-letter">A</span><span class="blue-letter">M</span>A</h1>
