--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Kodama</title>
 </head>
+
 <body>
     <header>
         <img class="logo" src="res/logo.png">
@@ -17,13 +19,22 @@
         </div>
     </header>
     <section class="start-section">
-        <!-- <img id="ground" src="res/ground.png"> -->
+        <div id="mountains"></div>
+        <div id="right-tree"></div>
+        <div id="ground"></div>
+        <div id="left-cloud"></div>
+        <div id="right-cloud"></div>
+        <div id="mashroom"></div>
+        <div id="hearts"></div>
+        <div id="stars"></div>
         <div class="content">
             <h2>ОНЛАЙН-ШКОЛА ПРОГРАММИРОВАНИЯ</h2>
-            <h1>K<span class="blue-letter">O</span>D<span class="purple-letter">A</span><span class="blue-letter">M</span>A</h1>
+            <h1>K<span class="blue-letter">O</span>D<span class="purple-letter">A</span><span
+                    class="blue-letter">M</span>A</h1>
             <img id="main-btn" src="res/main_button.png">
             <img id="select-course-btn" src="res/select_course_btn.png">
         </div>
     </section>
 </body>
+
 </html>
