header not fixed, landing section started

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             <img id="select-course-btn" src="res/select_course_btn.png">
         </div>
     </section>
+    <section class="landing-section">
+        <div class="content">
+            <h2 class="title-text">Kodama - это уникальная школа программирования, вдохновленная японскими легендами о "кодамах" - духах деревьев, символизирующих опыт и творчество</h2>
+        </div>
+    </section>
 </body>
 
 </html>
