start design bg for landing section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
     </section>
     <section class="landing-section">
         <div class="content">
-            <h2 class="title-text">Kodama - это уникальная школа программирования, вдохновленная японскими легендами о "кодамах" - духах деревьев, символизирующих опыт и творчество</h2>
+            <h2 class="title-text">Kodama - это уникальная школа программирования, вдохновленная японскими легендами о
+                "кодамах" - духах деревьев, символизирующих опыт и творчество</h2>
+            <section class="facts-section">
+                <div id="right-cloud-landing"></div>
+                <img class="fact fact-left" src="res/fact1.png" alt="Факт 1">
+                <img class="fact fact-center" src="res/fact2.png" alt="Факт 2">
+                <img class="fact fact-right" src="res/fact3.png" alt="Факт 3">
+            </section>
         </div>
     </section>
 </body>
