refactor start section

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <img class="logo" src="res/logo.png">
         <div class="header-items">
-            <a href="#">О ШКОЛЕ</a>
-            <a href="#">КУРСЫ</a>
-            <a href="#">ОТЗЫВЫ</a>
-            <a href="#">КОНТАКТЫ</a>
+            <a href="#">О школе</a>
+            <a href="#">Курсы</a>
+            <a href="#">Отзывы</a>
+            <a href="#">Контакты</a>
         </div>
     </header>
     <section class="start-section">
@@ -27,14 +27,23 @@
         <div id="mashroom"></div>
         <div id="hearts"></div>
         <div id="stars"></div>
+        <div id="kodamic"></div>
         <div class="content">
-            <h2>ОНЛАЙН-ШКОЛА ПРОГРАММИРОВАНИЯ</h2>
+            <h2>Онлайн-школа программирования</h2>
             <h1>K<span class="blue-letter">O</span>D<span class="purple-letter">A</span><span
                     class="blue-letter">M</span>A</h1>
             <img id="main-btn" src="res/main_button.png">
-            <img id="select-course-btn" src="res/select_course_btn.png">
+
+            <div class="container" id="select-course">
+                <a href="#">
+                    <img id="select-course-btn" src="res/select_course_btn.png">
+                </a>
+                <!--<img id="pointer" src="res/pointer.png">-->
+            </div>
+
         </div>
     </section>
+    <!--
     <section class="landing-section">
         <div class="content">
             <h2 class="title-text">Kodama - это уникальная школа программирования, вдохновленная японскими легендами о
@@ -46,6 +55,10 @@
                 <img class="fact fact-right" src="res/fact3.png" alt="Факт 3">
             </section>
         </div>
+    </section>
+    -->
+    <section class="">
+
     </section>
 </body>
 
