--- a/index.html
+++ b/index.html
@@ -57,8 +57,30 @@
         </div>
     </section>
     -->
-    <section class="">
-
+    <section class="about-section">
+        <div class="about-content">
+            <div id="top_decor"></div>
+            <div class="flex-section">
+                <div class="left">
+                    <h2>Добро пожаловать в мир школы программирования Kodama</h2>
+                    <p>Мы рады представить вам онлайн-школу программирования Kodama, где вы сможете окунуться в
+                        увлекательный мир кодирования и создания программ. Занятия в коде научат вас обдумывать и
+                        настраивать собственные проекты, применять различные уровни сложности и экспериментировать с
+                        кодом, а также создавать свои уникальные программные решения. Здесь вы можете общаться с
+                        опытными преподавателями, изучать разные языки и программирование, создавать веб-сайты,
+                        мобильные приложения и многое другое. Наши курсы также предоставляют возможность работать над
+                        реальными проектами, развивать свои навыки. Для вашего обучения предусмотрены различные
+                        настройки, включая индивидуальное обучение, гибкий график занятий и доступ к обновленным
+                        материалам. Вы также можете создавать свои собственные проекты, расширять свои знания и внедрять
+                        основы в сфере информационных технологий. Если вы стремитесь к новым вызовам и хотите освоить
+                        мир программирования, то Кодама — ваш идеальный выбор! </p>
+                </div>
+                <div class="right">
+                    <img src="res/right_image_about.png">
+                </div>
+            </div>
+            <div id="bottom_decor"></div>
+        </div>
     </section>
 </body>
 
