decor between sections

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <img class="logo" src="res/logo.png">
         <div class="header-items">
-            <a href="#">О школе</a>
+            <a href="#top_decor">О школе</a>
             <a href="#">Курсы</a>
             <a href="#">Отзывы</a>
             <a href="#">Контакты</a>
@@ -43,6 +43,8 @@
 
         </div>
     </section>
+
+    
     <!--
     <section class="landing-section">
         <div class="content">
@@ -82,6 +84,10 @@
             <div id="bottom_decor"></div>
         </div>
     </section>
+    
+    <div id="between-decor-purple">
+        <h3>Знания, приключения и веселье: выбери свой путь</h3>
+    </div>
 </body>
 
 </html>
