remove commented code, add adaptive styles for mobile(work bad)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class="logo" src="res/logo.png">
         <div class="header-items">
             <a href="#top_decor">О школе</a>
-            <a href="#">Курсы</a>
+            <a href="#courses">Курсы</a>
             <a href="#">Отзывы</a>
             <a href="#">Контакты</a>
         </div>
@@ -43,22 +43,6 @@
 
         </div>
     </section>
-
-    
-    <!--
-    <section class="landing-section">
-        <div class="content">
-            <h2 class="title-text">Kodama - это уникальная школа программирования, вдохновленная японскими легендами о
-                "кодамах" - духах деревьев, символизирующих опыт и творчество</h2>
-            <section class="facts-section">
-                <div id="right-cloud-landing"></div>
-                <img class="fact fact-left" src="res/fact1.png" alt="Факт 1">
-                <img class="fact fact-center" src="res/fact2.png" alt="Факт 2">
-                <img class="fact fact-right" src="res/fact3.png" alt="Факт 3">
-            </section>
-        </div>
-    </section>
-    -->
     <section class="about-section">
         <div class="about-content">
             <div id="top_decor"></div>
@@ -84,10 +68,16 @@
             <div id="bottom_decor"></div>
         </div>
     </section>
-    
+
     <div id="between-decor-purple">
         <h3>Знания, приключения и веселье: выбери свой путь</h3>
     </div>
+
+    <section class="courses-section" id="courses">
+        <div class="courses-content">
+            <div id="top_decor"></div>
+        </div>
+    </section>
 </body>
 
 </html>
