--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Kodama</title>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -35,7 +36,7 @@
             <img id="main-btn" src="res/main_button.png">
 
             <div class="container" id="select-course">
-                <a href="#">
+                <a href="#courses">
                     <img id="select-course-btn" src="res/select_course_btn.png">
                 </a>
                 <!--<img id="pointer" src="res/pointer.png">-->
@@ -76,8 +77,39 @@
     <section class="courses-section" id="courses">
         <div class="courses-content">
             <div id="top_decor"></div>
+            <div class="courses-container ">
+                <div class="course-card">
+                    <img src="res/figma_logo.png" alt="Figma">
+                    <div class="course-card-text">
+                        <h3>Графический дизайн</h3>
+                        <p>в редакторе Figma</p>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <img src="res/scratch_logo.png" alt="Scratch">
+                    <div class="course-card-text">
+                        <h3>Программирование</h3>
+                        <p>на языке Scratch</p>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <img src="res/comp_lit_logo.png" alt="Computer Literacy">
+                    <div class="course-card-text">
+                        <h3>Компьютерная</h3>
+                        <p>грамотность</p>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <img src="res/roblox_logo.png" alt="Roblox">
+                    <div class="course-card-text">
+                        <h3>Создание 3D игр</h3>
+                        <p>в Roblox</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
