courses section decor

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
     <section class="courses-section" id="courses">
         <div class="courses-content">
             <div id="top_decor"></div>
+            <div class="two-clouds" id="two-clouds-top"></div>
+            <div class="two-clouds" id="two-clouds-bottom"></div>
+            <div class="cloud" id="cloud-right-top"></div>
+            <div class="cloud" id="cloud-right-bottom"></div>
+            <div class="cloud" id="cloud-middle"></div>
+            <div class="cloud" id="cloud-left-bottom"></div>
             <div class="courses-container ">
                 <div class="course-card">
                     <img src="res/figma_logo.png" alt="Figma">
