animate select course btn, refactor text

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="course-card">
                     <img src="res/scratch_logo.png" alt="Scratch">
                     <div class="course-card-text">
-                        <h3>Программирование</h3>
+                        <h3>Создание 2D игр</h3>
                         <p>на языке Scratch</p>
                     </div>
                 </div>
