--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="res/logo.png">
-        <div class="header-items">
-            <a href="#top_decor">О школе</a>
-            <a href="#courses">Курсы</a>
-            <a href="#">Отзывы</a>
-            <a href="#">Контакты</a>
-        </div>
-    </header>
     <section class="start-section">
         <div id="mountains"></div>
         <div id="right-tree"></div>
@@ -44,6 +35,15 @@
 
         </div>
     </section>
+    <header>
+        <img class="logo" src="res/logo.png">
+        <div class="header-items">
+            <a href="#top_decor">О школе</a>
+            <a href="#courses">Курсы</a>
+            <a href="#">Отзывы</a>
+            <a href="#">Контакты</a>
+        </div>
+    </header>
     <section class="about-section">
         <div class="about-content">
             <div id="top_decor"></div>
@@ -115,6 +115,25 @@
             </div>
         </div>
     </section>
+
+    <section id="students-section">
+        <h3>Лучшие студенты школы</h3>
+        <div>
+            <div class="student-card">
+                <img src="res/student1.png">
+            </div>
+            <div class="student-card">
+                <img src="res/student1.png">
+            </div>
+            <div class="student-card">
+                <img src="res/student1.png">
+            </div>
+            <div class="student-card">
+                <img src="res/student1.png">
+            </div>
+        </div>
+    </section>
+
     <script src="script.js" defer></script>
 </body>
 
