--- a/index.html
+++ b/index.html
@@ -134,6 +134,34 @@
         </div>
     </section>
 
+    <section class="guide-school-section">
+        <div class="square" id="square1" data-speed="3"></div>
+        <div class="square" id="square2" data-speed="0.6"></div>
+        <div class="square" id="square3" data-speed="0.7"></div>
+        <div class="square" id="square4" data-speed="3"></div>
+        <div class="square" id="square5" data-speed="0.9"></div>
+        <div class="square" id="square6" data-speed="1"></div>
+        <div class="square" id="square7" data-speed="1.1"></div>
+        <div class="square" id="square8" data-speed="1.2"></div>
+        <div class="square" id="square9" data-speed="1.3"></div>
+        <div class="square" id="square10" data-speed="1.4"></div>
+        <div class="square" id="square11" data-speed="1.5"></div>
+        <div class="square" id="square12" data-speed="1.6"></div>
+        <div class="square" id="square13" data-speed="1.7"></div>
+        <div class="square" id="square14" data-speed="1.8"></div>
+        <div class="square" id="square15" data-speed="1.9"></div>
+        <div class="square" id="square16" data-speed="2"></div>
+        <div class="square" id="square17" data-speed="2.1"></div>
+        <div class="square" id="square18" data-speed="2.2"></div>
+        <div class="square" id="square19" data-speed="2.3"></div>
+        <div class="square" id="square20" data-speed="2.4"></div>
+
+        <iframe id="guide-school-video" src="https://www.youtube.com/embed/eg_rlPU5nU0?si=LIow4rn37jrKlWfj"
+            title="YouTube video player" frameborder="0" allow="accelerometer; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+    </section>
+
     <script src="script.js" defer></script>
 </body>
 
