--- a/index.html
+++ b/index.html
@@ -162,6 +162,38 @@
         </iframe>
     </section>
 
+    <section id="questions-section">
+        <div id="top_decor"></div>
+        <div id="questions-content">
+            <h2>Пожилые вопросики</h2>
+            <div id="fabs">
+                <div class="faq-left">
+                    <div class="faq-item" onclick="toggleAnswer('faq-answer1')">Вопрос</div>
+                    <div class="faq-answer" id="faq-answer1">Ответ</div>
+
+                    <div class="faq-item" onclick="toggleAnswer('faq-answer2')">Вопрос</div>
+                    <div class="faq-answer" id="faq-answer2">Ответ</div>
+
+                    <div class="faq-item" onclick="toggleAnswer('faq-answer3')">Вопрос</div>
+                    <div class="faq-answer" id="faq-answer3">Ответ</div>
+                </div>
+                <div class="faq-right">
+
+                    <div class="faq-item" onclick="toggleAnswer('faq-answer4')">Вопрос</div>
+                    <div class="faq-answer" id="faq-answer4">Ответ</div>
+
+                    <div class="faq-item" onclick="toggleAnswer('faq-answer5')">Вопрос</div>
+                    <div class="faq-answer" id="faq-answer5">Ответ</div>
+
+                    <div class="faq-item" onclick="toggleAnswer('faq-answer6')">Вопрос</div>
+                    <div class="faq-answer" id="faq-answer6">Ответ</div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+
     <script src="script.js" defer></script>
 </body>
 
