--- a/index.html
+++ b/index.html
@@ -200,8 +200,13 @@
 
     <section id="submit-app-section">
         <div id="submit-app-content">
-            <h2>Оставьте заявку</h2>
+            <!-- Левая часть - фотография -->
+            <div id="submit-app-photo">
+                <img src="res/request_photo.jpeg" alt="Your Photo" style="width: 300px;">
+            </div>
+            <!-- Правая часть - форма для ввода данных -->
             <div id="submit-app-form">
+                <h2>Оставьте заявку</h2>
                 <input type="text" placeholder="Ваше имя">
                 <input type="text" placeholder="Ваш телефон">
                 <input type="submit" value="Отправить">
