--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
         <div id="left-cloud"></div>
         <div id="right-cloud"></div>
         <div id="mashroom"></div>
+        <div id="sparkles"></div>
         <div id="hearts"></div>
         <div id="stars"></div>
         <div id="kodamic"></div>
-        <div class="content">
+        <div class="start-content">
             <h2>Онлайн-школа программирования</h2>
-            <h1>K<span class="blue-letter">O</span>D<span class="purple-letter">A</span><span
-                    class="blue-letter">M</span>A</h1>
+            <h1>
+                K
+                <span class="blue-letter">O</span>
+                D
+                <span class="purple-letter">A</span>
+                <span class="blue-letter">M</span>
+                A
+            </h1>
             <img id="main-btn" src="res/main_button.png">
 
             <div class="container" id="select-course">
@@ -40,8 +47,8 @@
         <div class="header-items">
             <a href="#top-decor">О школе</a>
             <a href="#courses">Курсы</a>
-            <a href="#">Отзывы</a>
-            <a href="#">Контакты</a>
+            <a href="#questions-section">Отзывы</a>
+            <a href="#submit-app-section">Контакты</a>
         </div>
     </header>
     <section class="about-section">
@@ -213,6 +220,11 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p>&copy; 2024 Kodama. Все права защищены.</p>
+        <p>Свяжитесь с нами: <a href="kodama.edu@gmail.com">kodama.edu@gmail.com</a></p>
+    </footer>
 
     <script src="script.js" defer></script>
 </body>
