send request adaptive fix, change text about

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <header>
         <img class="logo" src="res/logo.png">
-        <button id="menu-toggle"></button>
+        <button id="menu-toggle" class="button-img"><img src="res/mobile_menu_btn.png" alt="Menu"></button>
         <nav class="menu">
             <a href="#top-decor">О школе</a>
             <a href="#courses">Курсы</a>
@@ -55,7 +55,7 @@
     </header>
 
     <section id="mobile-menu">
-        <button id="close-menu-btn"></button>
+        <button id="close-menu-btn" class="button-img"><img src="res/exit_btn.png" alt="Close Menu"></button>
         <nav id="nav-mobile-menu">
             <a href="#top-decor">О школе</a>
             <a href="#courses">Курсы</a>
@@ -70,17 +70,20 @@
             <div class="flex-section">
                 <div class="left">
                     <h2>Добро пожаловать в мир школы программирования Kodama</h2>
-                    <p>Мы рады представить вам онлайн-школу программирования Kodama, где вы сможете окунуться в
-                        увлекательный мир кодирования и создания программ. Занятия в коде научат вас обдумывать и
-                        настраивать собственные проекты, применять различные уровни сложности и экспериментировать с
-                        кодом, а также создавать свои уникальные программные решения. Здесь вы можете общаться с
-                        опытными преподавателями, изучать разные языки и программирование, создавать веб-сайты,
-                        мобильные приложения и многое другое. Наши курсы также предоставляют возможность работать над
-                        реальными проектами, развивать свои навыки. Для вашего обучения предусмотрены различные
-                        настройки, включая индивидуальное обучение, гибкий график занятий и доступ к обновленным
-                        материалам. Вы также можете создавать свои собственные проекты, расширять свои знания и внедрять
-                        основы в сфере информационных технологий. Если вы стремитесь к новым вызовам и хотите освоить
-                        мир программирования, то Кодама — ваш идеальный выбор! </p>
+                    <p>
+                        Добро пожаловать в Kodama - онлайн-школу программирования, где мы создаем будущее вместе! Мы
+                        предлагаем вам уникальную возможность погрузиться в увлекательный мир кодирования и создания
+                        программ. Наши курсы разработаны для того, чтобы помочь вам освоить различные языки
+                        программирования, научиться создавать веб-сайты, игры и многое другое.
+
+                        У нас вы найдете опытных преподавателей, готовых поддержать вас на каждом шагу вашего обучения.
+                        Мы предлагаем гибкий график занятий, чтобы вы могли учиться в удобное для вас время, а также
+                        возможность работать над реальными проектами, что поможет вам применить полученные навыки на
+                        практике.
+
+                        Присоединяйтесь к нашему сообществу и станьте частью новой волны программистов, готовых изменить
+                        мир с помощью технологий!
+                    </p>
                 </div>
                 <div class="right">
                     <img src="res/right_image_about.png">
@@ -223,9 +226,7 @@
 
     <section id="submit-app-section">
         <div id="submit-app-content">
-            <div id="submit-app-photo">
-                <img src="res/request_photo.jpeg" alt="Your Photo" style="width: 300px;">
-            </div>
+            <img id="submit-app-photo" src="res/request_photo.jpeg">
             <div id="submit-app-form">
                 <h2>Оставьте заявку</h2>
                 <input type="text" placeholder="Ваше имя">
