--- a/index.html
+++ b/index.html
@@ -179,10 +179,13 @@
         <div class="square" id="square19" data-speed="2.3"></div>
         <div class="square" id="square20" data-speed="2.4"></div>
 
-        <iframe id="guide-school-video" src="https://www.youtube.com/embed/eg_rlPU5nU0?si=LIow4rn37jrKlWfj"
-            title="YouTube video player" frameborder="0" allow="accelerometer; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-        </iframe>
+        <div id="guide-school-content">
+            <h3>Путеводитель по нашей школе</h3>
+            <iframe id="guide-school-video" src="https://www.youtube.com/embed/eg_rlPU5nU0?si=LIow4rn37jrKlWfj"
+                title="YouTube video player" frameborder="0" allow="accelerometer; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+            </iframe>
+        </div>
     </section>
 
     <section id="questions-section">
