--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
         <div class="start-content">
             <h2>Онлайн-школа программирования</h2>
             <h1>
-                K
-                <span class="blue-letter">O</span>
-                D
-                <span class="purple-letter">A</span>
-                <span class="blue-letter">M</span>
-                A
+                K<span class="blue-letter">O</span>D<span class="purple-letter">A</span><span
+                    class="blue-letter">M</span>A
             </h1>
             <img id="main-btn" src="res/main_button.png">
 
@@ -182,8 +178,8 @@
         <div id="guide-school-content">
             <h3>Путеводитель по нашей школе</h3>
             <iframe id="guide-school-video" src="https://www.youtube.com/embed/eg_rlPU5nU0?si=LIow4rn37jrKlWfj"
-                title="YouTube video player" frameborder="0" allow="accelerometer; gyroscope; picture-in-picture; web-share"
-                allowfullscreen>
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
         </div>
     </section>
