--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <input type="text" placeholder="Ваше имя">
                 <input type="tel" placeholder="Ваш телефон">
                 <input type="email" placeholder="Ваша почта">
-                <input type="submit" value="Отправить">
+                <button class="submit-app-form__btn" type="submit">Отправить</button>
             </div>
         </div>
     </section>
