--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 
-<body>
+<body id="top-site">
     <section class="start-section">
         <div id="mountains"></div>
         <div id="right-tree"></div>
@@ -39,7 +39,9 @@
     </section>
 
     <header>
-        <img class="logo" src="res/logo.png">
+        <a href="#top-site" id="logo-link">
+            <img class="logo" src="res/logo.png">
+        </a>
         <button id="menu-toggle" class="button-img"><img src="res/mobile_menu_btn.png" alt="Menu"></button>
         <nav class="menu">
             <a href="#top-decor">О школе</a>
@@ -224,7 +226,7 @@
 
     <section id="submit-app-section">
         <div id="submit-app-content">
-            <img id="submit-app-photo" src="res/request_photo.jpeg">
+            <img id="submit-app-photo" src="res/request_photo.jpg">
             <div id="submit-app-form">
                 <h2>Оставьте заявку</h2>
                 <input type="text" placeholder="Ваше имя">
