add more squares to guide section, refactor faq structure

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 
     <section class="guide-school-section">
         <div class="square" id="square1" data-speed="3"></div>
-        <div class="square" id="square2" data-speed="0.6"></div>
-        <div class="square" id="square3" data-speed="0.7"></div>
+        <div class="square" id="square2" data-speed="2"></div>
+        <div class="square" id="square3" data-speed="3"></div>
         <div class="square" id="square4" data-speed="3"></div>
-        <div class="square" id="square5" data-speed="0.9"></div>
+        <div class="square" id="square5" data-speed="2S"></div>
         <div class="square" id="square6" data-speed="1"></div>
         <div class="square" id="square7" data-speed="1.1"></div>
         <div class="square" id="square8" data-speed="1.2"></div>
@@ -171,7 +171,7 @@
         <div class="square" id="square14" data-speed="1.8"></div>
         <div class="square" id="square15" data-speed="1.9"></div>
         <div class="square" id="square16" data-speed="2"></div>
-        <div class="square" id="square17" data-speed="2.1"></div>
+        <div class="square" id="square17" data-speed="2"></div>
         <div class="square" id="square18" data-speed="2.2"></div>
         <div class="square" id="square19" data-speed="2.3"></div>
         <div class="square" id="square20" data-speed="2.4"></div>
@@ -197,28 +197,31 @@
             <h2>Вопросы, которые могут возникнуть у вас</h2>
             <div id="fabs">
                 <div class="faq-left">
-                    <div class="faq-item" onclick="toggleAnswer('faq-answer1')">Продолжительность курсов</div>
-                    <div class="faq-answer" id="faq-answer1">Ответ</div>
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer1')">Продолжительность курсов</div>
+                    <div class="faq faq-answer" id="faq-answer1">Ответ</div>
 
-                    <div class="faq-item" onclick="toggleAnswer('faq-answer2')">Стоимость занятий</div>
-                    <div class="faq-answer" id="faq-answer2">Ответ</div>
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer2')">Стоимость занятий</div>
+                    <div class="faq faq-answer" id="faq-answer2">Ответ</div>
 
-                    <div class="faq-item" onclick="toggleAnswer('faq-answer3')">Какие возрастные категории вы обучаете?
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer3')">Какие возрастные категории вы
+                        обучаете?
                     </div>
-                    <div class="faq-answer" id="faq-answer3">Ответ</div>
+                    <div class="faq faq-answer" id="faq-answer3">Ответ</div>
                 </div>
+
                 <div class="faq-right">
 
-                    <div class="faq-item" onclick="toggleAnswer('faq-answer4')">Какие навыки мой ребенок приобретет?
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer4')">Какие навыки мой ребенок приобретет?
                     </div>
-                    <div class="faq-answer" id="faq-answer4">Ответ</div>
+                    <div class="faq faq-answer" id="faq-answer4">Ответ</div>
 
-                    <div class="faq-item" onclick="toggleAnswer('faq-answer5')">Какие дополнительные мероприятия
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer5')">Какие дополнительные мероприятия
                         доступны для учеников?</div>
-                    <div class="faq-answer" id="faq-answer5">Ответ</div>
+                    <div class="faq faq-answer" id="faq-answer5">Ответ</div>
 
-                    <div class="faq-item" onclick="toggleAnswer('faq-answer6')">Сколько времени длится занятие?</div>
-                    <div class="faq-answer" id="faq-answer6">Ответ</div>
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer6')">Сколько времени длится занятие?
+                    </div>
+                    <div class="faq faq-answer" id="faq-answer6">Ответ</div>
                 </div>
             </div>
         </div>
